# annotator-xe

./: .gitignore  LICENSE  README.md  config.yaml  project-description.md  pyQT5_YOLO.py  pyQT_YOLO.py  pyproject.toml  requirements-dev.txt  requirements.txt  workspaces.yaml
scripts/: README.md  build.bat  build.sh  clean.bat  clean.sh  lint.bat  lint.sh  run.bat  run.sh  setup.bat  setup.sh  test.bat  test.sh
src/annotator_xe/: __init__.py  __main__.py  app.py
src/annotator_xe/core/: __init__.py  annotation_format.py  coco_format.py  config.py  createml_format.py  detector.py  format_registry.py  models.py  pascal_voc_format.py  thumbnail_cache.py  undo_redo.py  yolo_format.py
src/annotator_xe/ui/: __init__.py  drawing_area.py  history_panel.py  image_browser.py  main_window.py  minimap.py  theme.py
src/annotator_xe/ui/dialogs/: __init__.py  format_choice.py  import_export.py  model_selector.py  settings.py
src/annotator_xe/ui/widgets/: __init__.py
src/annotator_xe/utils/: __init__.py  workspace.py
src/annotator_xe/workers/: __init__.py  image_loader.py
tests/: __init__.py  conftest.py  test_coco_format.py  test_config.py  test_createml_format.py  test_format_detection.py  test_models.py  test_pascal_voc_format.py  test_yolo_format.py
